app/src/main/java/com/example/luistovar/archapp/domain/models/errors/exceptions/InvalidDataException.kt
package com.example.luistovar.archapp.domain.models.errors.exceptions

import java.lang.Exception

class InvalidDataException(message: String = "The required information is not valid") :
    Exception(message) {
}